@@ -1357,7 +1357,7 @@ class _DatabaseHandler extends stdClass
    *   
    * 
    */
-  function get_student_majors_from_db($student_cwid, $bool_return_as_full_record = FALSE) {
+  function get_student_majors_from_db($student_cwid, $bool_return_as_full_record = FALSE, $perform_join_with_degrees = TRUE) {
     // Looks in the student_degrees table and returns an array of major codes.
     $rtn = array();
     
@@ -1373,12 +1373,21 @@ class _DatabaseHandler extends stdClass
         
     $catalog_year = $this->get_student_catalog_year($student_cwid);
     
-    $res = $this->db_query("SELECT * FROM student_degrees a, degrees b
-                            WHERE student_id = ? 
-                            AND a.major_code = b.major_code
-                            AND b.catalog_year = ?
-                            ORDER BY b.advising_weight, b.major_code
-                            ", $student_cwid, $catalog_year);
+    if ($perform_join_with_degrees) {
+      $res = $this->db_query("SELECT * FROM student_degrees a, degrees b
+                              WHERE student_id = ? 
+                              AND a.major_code = b.major_code
+                              AND b.catalog_year = ?
+                              ORDER BY b.advising_weight, b.major_code
+                              ", $student_cwid, $catalog_year);
+    }
+    else {
+      // No need to join with degrees table...
+      $res = $this->db_query("SELECT * FROM student_degrees a
+                              WHERE student_id = ?
+                              ORDER BY major_code
+                              ", $student_cwid);      
+    }
     while ($cur = $this->db_fetch_array($res)) {
       if ($bool_return_as_full_record) {
         $rtn[$cur["major_code"]] = $cur;
